# Playground

./: CMakeLists.txt  linkedlist.c  random.c  streams.c  streams.h
.github/workflows/: .clean.yml.swp
asm/: branches.s  compile.sh  start.s
c/: length.c  mallocator.c  substring.c  swap.c
c++/: Atomics.cpp  CMakeLists.txt  Proxy.cpp  UniquePointer.cpp  containers.cpp  main.cpp  pruebas.cpp  pruebas2.cpp  string.cpp
c++/bank/: bank.cpp  bank.h
c++/bank/accounts/: account.cpp  account.h  accountrep.cpp  accountrep.h
c++/bank/accounts/domain/: account.cpp  account.h  accountrepository.h  accountrespostiory.cpp
c++/bank/accounts/infrastructure/: inmemaccountrepository.cpp  inmemaccountrepository.h
c++/bank/identifiers/domain/: indentifiergenerator.cpp  indentifiergenerator.h
c++/bank/loggers/domain/: logger.cpp  logger.h  loglevel.cpp  loglevel.h
c++/bank/loggers/infrastructure/: inconsoleloggerinfo.cpp  inconsoleloggerinfo.h
c++/list/: linkedlist.cpp  linkedlist.h
c++/list/iterator/: iterable.hpp  iterator.hpp
c++/list/streams/: stream.hpp
data-structures/: pom.xml
distributed-systems/: go.mod
distributed-systems/src/: main.go  node.go
gc/: CMakeLists.txt  shared.hpp
gc/memory/: allocator.hpp
gc/memory/mark_compact/: allocation_buffer.cpp  allocation_buffer.hpp  allocator.cpp  allocator.hpp  gc_compact.hpp  gc_compacter.cpp  gc_compacter.hpp  gc_mark.cpp  gc_mark.hpp  gc_marker.cpp  gc_marker.hpp  gc_thread_info.hpp  gc_vm_info.cpp  gc_vm_info.h
gc/src/: allocator.go  queue.go
gc/src/mark_compact/: allocator.go  gc.go  mark.go  mark_compact.go
gc/src/objects/: array.go  string.go  struct.go  types.go
gc/src/vm/: package.go  thread.go  vm.go
gc/types/: array.hpp  string.hpp  struct.hpp  types.hpp  utils.cpp  utils.hpp
gc/vm/: package.hpp  thread.cpp  thread.hpp  vm.cpp  vm.hpp
go/: go.mod  go.sum
go/api/: main.go
go/arrays/: arrays.go
go/introduccion/: main.go
go/io/: io.go
go/linkedlist/: LinkedListPlayground.go
go/server/: TCPServer.go
interpreters/: go.mod
interpreters/c/: CMakeLists.txt  bytecode.h  chunk.c  chunk.h  main.c  memory.h  shared.h
interpreters/c/chunk/: chunk.c  chunk.h  chunk_disassembler.c  chunk_disassembler.h
interpreters/c/compiler/: compiler.c  compiler.h
interpreters/c/memory/: memory.c  memory.h
interpreters/c/scanner/: scanner.c  scanner.h
interpreters/c/table/: table.c  table.h
interpreters/c/types/: cast.c  cast.h  object.c  object.h  types.c  types.h
interpreters/c/vm/: vm.c  vm.h
interpreters/src/: main.go
kafka/: pom.xml
kernel-modules/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd  Makefile  hello.c  hello.ko  hello.mod  hello.mod.c  modules.order
kernel-modules/block/: Makefile  block.c  block.h
kernel-modules/bus/: Makefile  bus.c  bus.h
kernel-modules/char/: .Module.symvers.cmd  .modules.order.cmd  .scull.c.swp  .scull.h.swp  .scull.ko.cmd  .scull.mod.cmd  .scull.mod.o.cmd  .scull.o.cmd  Makefile  modules.order  scull.c  scull.h  scull.ko  scull.mod  scull.mod.c  scull_load
kernel-modules/hello/: hello.c
rust/src/: main.rs
zookeeper/: README.md  pom.xml
(+263 files in other folders)
